using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant
{
    public static string ANIM_ATTACK = "Attack";

    public static string ANIM_IDLE = "Idle";

    public static string ANIM_DEAD = "Dead";

    public static string ANIM_RUN = "Run";

    public static string TAG_CHARACTER = "Character";

    public static string TAG_WEAPON = "Weapon";

    public static string TAG_COIN = "Coin";

    public static string TAG_BOT = "Bot";

    public static string TAG_UNTAGGED = "Untagged";

    public static string TAG_TURRET = "Turret";

    public static string TAG_WIN = "Win";
}
